--- a/assets/css/atyle.css
+++ b/assets/css/atyle.css
@@ -12,48 +12,75 @@
   top: 0px;
   right: 0px;
   background-color: #121212; 
-  width: 300px;
+  width: 25%;
   height: 100%;
-  display: flex
-
-  /* z-index: 300;
-  width: 300px;
-  height: 100%; */
+  display: flex;
 }
 .mainPage{
-  display:flex;
-  position: absolute;
-  left: 0px;
-  top: 57px;
+  display: flex;
   background-color: #000000;
-  width: 963px;
+  width: 75%;
+  float: left;
   height: 100%;
-  align-items:center;
-  flex-direction:column;
-  flex-wrap:wrap;
-  overflow: auto
+  align-items: center;
+  flex-direction: column;
+  flex-wrap: wrap;
+  overflow: auto;
 }
 .transparent{
-  background-color: #bd3f32;
+  background-color: transparent;
   color: #ffffff;
 }
 .display{
-  width: 760px;
-  height: 1900px;
-  margin: 20px;
-  /* background-color: #131313; */
+  width: 80%;
+  min-height: 700px;
+  margin-bottom: 150px;
+  margin-top: 100px;
   background-image: linear-gradient(to bottom, #cb356b, #bd3f32);
-  display:flex;
-  flex-wrap:wrap;
-  flex-direction:column;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  padding: 20px;
 
-}
-.small{
-  background-color:red;
-  outline:1px solid black;
-  height:100px;
-  width:100px;
 }
 .margin{
   margin: 10px;
+}
+.cursor{
+  cursor: pointer;
+}
+.cursor:hover{
+  color: #28a745;
+}
+.cursor:clicked{
+  color:blue;
+}
+.details, .poster{
+  float: left;
+  width: 40%;
+}
+.boldNBig{
+  font-size: 20px;
+  font-weight: bold;
+}
+.details{
+margin-left: 10px;
+}
+.music{
+  background-color: transparent;
+  color: #28a745;
+  border-color: #28a745;
+  border-radius: 5px;
+  margin-top: 5px;
+}
+.music:hover{
+  background-color: #28a745;
+  color: #ffffff;
+  border-color: #28a745;
+}
+.suggestions{
+  padding: 20px 10px;
+  display: flex;
+  flex-direction: row;
+  background-color: transparent;
 }
