--- a/style.css
+++ b/style.css
@@ -51,13 +51,13 @@
 .margin{
   margin: 10px;
 }
-.cursor{
+.music-cursor, .cursor{
   cursor: pointer;
 }
-.cursor:hover{
+.music-cursor:hover, .cursor:hover{
   color: #28a745;
 }
-.cursor:clicked{
+.music-cursor:clicked, .cursor:clicked{
   color:blue;
 }
 .details, .poster{
