--- a/style.css
+++ b/style.css
@@ -89,3 +89,9 @@ margin-left: 10px;
   flex-direction: row;
   background-color: transparent;
 }
+.nav-logo{
+  width: 100px;
+  height: 100px;;
+  position: absolute;
+  margin-left: 100px;
+}
